# python-web-practice-23

module04/lesson01/get_post_jinja/: main.py
module05/lesson01/: 15_task_group.py  fetch_data_example.py
module05/lesson02/: 01_aiohttp_client.py
module07/example_w_alembic/: pyproject.toml
module07/example_w_alembic/alembic/: env.py
module07/example_w_alembic/alembic/versions/: 1315ced76ce6_added_phone.py  6f2e58f61aac_added_address.py  9898885fd8aa_added_tag.py  f3eb64e1b345_init.py
module07/example_w_alembic/fresh_example/: db_config.py  models.py  queries.db  scalars_etc.py
module07/fresh_example/: db_config.py  models.py
module07/lesson01/: example_core.py  example_new_session.py  example_session.py
module08/: docker-compose.yaml  pyproject.toml
module09/lesson_01/: book.py  main.py
module09/lesson_02/: main.py  sel_cas.py  spider.py
module10/django-quotes/: docker-compose.yaml  pyproject.toml
module10/django-quotes/quotes/: forms.py  models.py  urls.py  views.py
module10/django-quotes/quotes/migrations/: 0001_initial.py  0002_remove_quote_added_by.py
module10/django-quotes/quotes/templates/: home.html
module10/django-quotes/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html
module10/django-quotes/quotes_project/: settings.py  urls.py
module10/django-quotes/users/: forms.py  urls.py  views.py
module10/django-quotes/users/templates/: base.html
module10/django-quotes/users/templates/users/: login.html  logout.html  register.html
module11/fastapi-contacts/: main.py
module11/lesson01/: main.py
(+48 files in other folders)
