[tool.poetry]
name = "django-quotes"
version = "0.1.0"
description = ""
authors = ["Sergey Tovstonog <s.tovstonog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
setuptools = "^70.2.0"
django-crispy-forms = "^2.2"
crispy-bootstrap4 = "^2024.1"
psycopg2-binary = "^2.9.9"
psycopg-binary = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
